<resources>
    <!--    App   -->
    <string name="app_name">Delivery app</string>

    <!--    SplashActivity  -->
    <string name="splash_description">SplashActivity logo description</string>
    <string name="fast_delivery">Fast Delivery</string>

    <!-- registration -->
    <string name="login">login:</string>
    <string name="password">Password:</string>
    <string name="login_button">login</string>
    <string name="register">REGISTER</string>

    <!-- products fragment -->
    <string name="hello_products_fragment">Fast Delivery</string>

    <!-- bottom navigation -->
    <string name="menu_list">dishes list</string>
    <string name="menu_category">choice category</string>
    <string name="menu_shopping_cart">shopping cart</string>

    <!-- shipping cart fragment -->
    <string name="accept_payment">DONE</string>
    <string name="email_hint_text">0000 0000 0000 0000</string>
    <string name="dish_cost">cost: 5$</string>
    <string name="pizza">PIZZA</string>
    <string name="card_mm">MM</string>
    <string name="card_yy">YY</string>
    <string name="name_hint">name</string>
    <string name="lastname_hint">lastname</string>
    <string name="cart_is_empty">looks like your cart is empty...</string>
</resources>