<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_cyan"
    android:visibility="visible"
    tools:context=".presentation.fragments.ShoppingCartFragment"
    tools:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/filled_cart_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="40dp"
                android:orientation="vertical"
                tools:ignore="UselessLeaf">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:orientation="vertical"
                        tools:ignore="UselessLeaf">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginVertical="30dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="25dp"
                        android:orientation="vertical"
                        tools:ignore="UselessLeaf">

                        <EditText
                            android:id="@+id/card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/email_hint_text"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:textColorHint="@color/cyan_hint" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            tools:ignore="UselessLeaf">

                            <EditText
                                android:id="@+id/card_MM"
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:ems="10"
                                android:hint="@string/card_mm"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:textColorHint="@color/cyan_hint" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:text="/"/>

                            <EditText
                                android:id="@+id/card_YY"
                                android:layout_width="50dp"
                                android:layout_height="40dp"
                                android:ems="10"
                                android:hint="@string/card_yy"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:textColorHint="@color/cyan_hint" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            tools:ignore="UselessLeaf">

                            <EditText
                                android:id="@+id/card_name"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/name_hint"
                                android:importantForAutofill="no"
                                android:inputType="text"
                                android:textColorHint="@color/cyan_hint" />

                            <EditText
                                android:id="@+id/card_lastname"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/lastname_hint"
                                android:importantForAutofill="no"
                                android:inputType="text"
                                android:textColorHint="@color/cyan_hint" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/pay_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_shape"
                    android:text="@string/accept_payment" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/empty_cart_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="40dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:paddingVertical="50dp"
                    android:src="@drawable/empty_cart_image"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_is_empty"
                    android:textSize="20sp"
                    android:paddingVertical="20dp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>